[package]
name = "mission-control"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.72.0"

[dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
tokio = {version = "1.45.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
walkdir = "2.5.0"